# py-misc

./: Makefile  Pipfile  pyproject.toml
misc/: asynctools.py  functools.py  scrapetools.py  systools.py
notebooks/: 0-2018-07-13-bf-asynctools.ipynb  1-2018-07-17-bf-scrapetools.ipynb  2-2018-07-18-bf-scrape.ipynb  3-2018-07-19-bf-aiter-to-iter.ipynb
